# pwd-rs

./: .env  .gitignore  Cargo.toml  README.md  data.db
benches/: db_bench.rs
migrations/2023-07-31-063200_create_passwords/: down.sql  up.sql
obsidian/: Design.md  Password Manager.md
obsidian/.obsidian/: workspace.json
obsidian/Frameworks/: Frameworks.md
pwd-rs vault/: Design.md
pwd-rs vault/.obsidian/: workspace.json
pwd-rs vault/Frameworks/: Clap.md
src/: args.rs  console.rs  crypto.rs  lib.rs  main.rs  models.rs  ops.rs  schema.rs
