[package]
name = "pwd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2="0.10.7"
aes-gcm="0.10.2"
sqlite="0.31.0"
block-padding="0.3.3"
hex-literal="0.4.1"
pbkdf2="0.12.2"
clap = { version = "4.3.19", features = ["derive"] }
