[package]
name = "pwd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2="0.10.7"
aes-gcm="0.10.2"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
hex-literal="0.4.1"
pbkdf2="0.12.2"
clap = { version = "4.3.19", features = ["derive"] }
